force-app/core/main/default/objects/Demo_Persona_Nba__c/Demo_Persona_Nba__c.object-meta.xml
<CustomObject>
    <label>Persona Next Best Action</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Persona NBA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Next Best Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>