force-app/core/main/default/objects/Demo_Persona_Nba__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <description>Short tag shown above the title (e.g. "Cross-Sell", "Retention", "Upsell").</description>
    <length>40</length>
    <type>Text</type>
</CustomField>