force-app/core/main/default/objects/Demo_Persona_Nba__c/fields/CTA_Label__c.field-meta.xml
<CustomField>
    <fullName>CTA_Label__c</fullName>
    <label>CTA Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>