force-app/core/main/default/objects/Demo_Persona_Nba__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Hero Image URL</label>
    <description>Optional hero image on the NBA card. If the URL fails to load, the widget falls back to a colored initial tile.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>