force-app/core/main/default/objects/Demo_Persona_Nba__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>